# filensdk-rust

./: .gitignore  Cargo.toml  README.md  generate_framework.sh
src/: auth.rs  credentials.rs  dir.rs  download.rs  download_stream.rs  error.rs  file.rs  filensdk.rs  fs_download.rs  httpclient.rs  lib.rs  upload.rs
src/crypto/: file_decrypt.rs  file_encrypt.rs  metadata.rs  mod.rs  password.rs
src/httpclient/: endpoints.rs  fs_download.rs  fs_upload.rs  httpclient.rs  mod.rs
src/httpserver/: config.rs  httpserver.rs  mod.rs
src/mod_private/: download.rs  mod.rs  net_download_methods.rs  net_interaction.rs  net_taskmgr.rs  task_stream.rs  upload.rs
src/mod_private/net_interaction/: low_disk.rs  low_memory.rs
src/requests/: auth.rs  fs.rs  mod.rs
src/responses/: auth.rs  fs.rs  mod.rs
streamed_json/: Cargo.toml
streamed_json/src/: lib.rs
streamed_json/streamed-json-proc-macro/: Cargo.toml
streamed_json/streamed-json-proc-macro/src/: lib.rs
streamed_json/tests/: main.rs
tests/: download.rs  main.rs  upload.rs
uniffi-shared-tokio-runtime-proc/: Cargo.toml
uniffi-shared-tokio-runtime-proc/src/: lib.rs
uniffi-shared-tokio-runtime-proc/tests/: lib.rs
