[package]
name = "filensdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["blocking", "json", "stream"] }
uniffi = { version = "0.29.0", features = [ "cli" ] }
serde = "1.0.218"
ron = "0.8"
serde_json = "1.0.139"
url = "2.5.4"
serde_repr = "0.1.19"
thiserror = "2.0.11"
hex = "0.4.3"
ring = "0.17.11"
bytes = "1.10.0"
base64 = "0.22.1"
uuid = { version = "1.15.1", features = ["v4"] }
mime_guess = "2.0.5"
tokio-util = "0.7.13"
hyper = { version = "1.6.0", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", features = ["full"] }
futures-core = "0.3.31"
async-stream = "0.3.6"
range-set = "0.0.11"
uniffi_shared_tokio_runtime_proc = { path = "uniffi-shared-tokio-runtime-proc" }
futures = "0.3.31"

[build-dependencies]
uniffi = { version = "0.29.0", features = [ "build" ] }

[dev-dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
dotenv = "0.15.0"
test-context = "0.4.1"
memory-stats = "1.2.0"
rand = "0.9.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "filensdk"

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
