[package]
name = "uniffi_shared_tokio_runtime_proc"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = { version = "2.0.99", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.0.1", features = ["full"] }
uniffi = { version = "0.29.0", features = [ "cli" ] }

[lib]
proc-macro = true
