[package]
name = "streamed_json_proc_macro"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = { version = "2.0.99", features = ["full"] }

[dev-dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.140"

[lib]
proc-macro = true
